--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,7 @@ before_install:
 
 script:
   - ./gradlew -Pcoverage --no-daemon clean assembleFocusX86Nightly
-  - echo "--" > .adjust_token
-  - ./gradlew -Pcoverage --no-daemon jacocoFocusX86NightlyTestReport
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - ls -lht $HOME
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
